--- a/Notebooks/Sadamingh Script.ipynb
+++ b/Notebooks/Sadamingh Script.ipynb
@@ -1102,6 +1102,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Save Visulizations as HTMLs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig1.write_html(\"../docs/_includes/fig1.html\")\n",
+    "fig2.write_html(\"../docs/_includes/fig2.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Stop Service"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
