Update Distribution Plot

--- a/Notebooks/Sadamingh Script.ipynb
+++ b/Notebooks/Sadamingh Script.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,7 @@
     "from pyspark import SparkContext, SparkConf\n",
     "\n",
     "import plotly.express as px \n",
+    "from plotly.subplots import make_subplots\n",
     "from jupyter_dash import JupyterDash \n",
     "import dash_core_components as dcc \n",
     "import dash_html_components as html \n",
@@ -143,7 +144,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Print and view the original data"
+    "### 3.0 Data Description"
    ]
   },
   {
@@ -974,13 +975,113 @@
     }
    ],
    "source": [
-    "COMMA_MATCHER = re.compile(r\",(?=(?:[^\\\"']*[\\\"'][^\\\"']*[\\\"'])*[^\\\"']*$)\")\n",
+    "COMMA_MATCHER = re.compile(r\",(?=(?:[^\\\"]*[\\\"][^\\\"]*[\\\"])*[^\\\"]*$)\")\n",
     "rdd = rdd.map(lambda x: COMMA_MATCHER.split(x))\n",
     "rdd = rdd.map(lambda x: [i.replace(\"\\\"\", \"\") for i in x])\n",
     "data = rdd.collect()\n",
     "df = to_DataFrame(data)\n",
     "header = list(df.columns)\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1999"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of records: minus 1 header \n",
+    "rdd.count() - 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1398"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Number of Physicians: minus 1 header \n",
+    "Physician_id = header.index('Physician_Profile_ID')\n",
+    "rdd.map(lambda x: x[Physician_id]).distinct().count() - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1330332.6100000003"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total Amount of Money\n",
+    "dollars_index = header.index('Total_Amount_of_Payment_USDollars')\n",
+    "rdd.map(lambda x: float(x[dollars_index]) if isfloat(x[dollars_index]) else 0).sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1 Payment Distribution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_Payment = header.index('Total_Amount_of_Payment_USDollars')\n",
+    "rdd_no_header = rdd.filter(lambda x: x[col_Payment] != 'Total_Amount_of_Payment_USDollars' and x[col_Payment] != '')\n",
+    "rdd_Payment = rdd_no_header.map(lambda x: float(x[col_Payment]) if isfloat(x[col_Payment]) else np.NaN)\n",
+    "rdd_Payment_l_50 = rdd_Payment.map(lambda x: x if x > 0 and x < 50 else np.NaN)\n",
+    "df = pd.DataFrame(rdd_Payment_l_50.collect(), columns=['Payment'])\n",
+    "fig1_1 = px.histogram(df, x=\"Payment\", marginal=\"violin\")\n",
+    "null = fig1_1.update_layout(\n",
+    "    title={'text':'Payment Distribution with Payment in $0 ~ $50',\n",
+    "           'xanchor':'center',\n",
+    "           'yanchor':'top',\n",
+    "           'x':0.5})\n",
+    "\n",
+    "rdd_Payment_g_50 = rdd_Payment.map(lambda x: x if x > 50 and x < 2000 else np.NaN)\n",
+    "df = pd.DataFrame(rdd_Payment_g_50.collect(), columns=['Payment'])\n",
+    "fig1_2 = px.histogram(df, x=\"Payment\", marginal=\"violin\")\n",
+    "null = fig1_2.update_layout(\n",
+    "    title={'text':'Payment Distribution with Payment in $50 ~ $2,000',\n",
+    "           'xanchor':'center',\n",
+    "           'yanchor':'top',\n",
+    "           'x':0.5})"
    ]
   },
   {
@@ -992,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1104,7 @@
     "Recipient_State_count = pd.DataFrame(Recipient_State_count)\n",
     "Recipient_State_count.columns = ['Code', 'Count']\n",
     "\n",
-    "fig1 = px.choropleth(Recipient_State_count,\n",
+    "fig2 = px.choropleth(Recipient_State_count,\n",
     "                    locations='Code',\n",
     "                    color='Count',\n",
     "                    color_continuous_scale='oranges',\n",
@@ -1011,7 +1112,7 @@
     "                    labels={'Current Unemployment Rate':'Unemployment Rate %'},\n",
     "                    scope='usa')\n",
     "\n",
-    "null = fig1.update_layout(\n",
+    "null = fig2.update_layout(\n",
     "    title={'text':'Number of Recipient Records per State',\n",
     "           'xanchor':'center',\n",
     "           'yanchor':'top',\n",
@@ -1027,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1044,7 +1145,7 @@
     "Payment_State_count = pd.DataFrame(Payment_State_count)\n",
     "Payment_State_count.columns = ['Code', 'Payment']\n",
     "\n",
-    "fig2 = px.choropleth(Payment_State_count,\n",
+    "fig3 = px.choropleth(Payment_State_count,\n",
     "                    locations='Code',\n",
     "                    color='Payment',\n",
     "                    color_continuous_scale='oranges',\n",
@@ -1052,7 +1153,7 @@
     "                    labels={'Current Unemployment Rate':'Unemployment Rate %'},\n",
     "                    scope='usa')\n",
     "\n",
-    "null = fig2.update_layout(\n",
+    "null = fig3.update_layout(\n",
     "    title={'text':'Manufacturer amount of payments',\n",
     "           'xanchor':'center',\n",
     "           'yanchor':'top',\n",
@@ -1068,14 +1169,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "app.layout = html.Div([\n",
     "    html.H1(\"JupyterDash Demo\"),\n",
-    "    dcc.Graph(id='graph1', figure=fig1),\n",
+    "#     dcc.Graph(id='graph1', figure=fig1),\n",
     "    dcc.Graph(id='graph2', figure=fig2),\n",
+    "    dcc.Graph(id='graph3', figure=fig3),\n",
+    "    dcc.Graph(id='graph_test_1', figure=fig1_1),\n",
+    "    dcc.Graph(id='graph_test_2', figure=fig1_2),\n",
     "    html.Div([\n",
     "        html.P('Dash converts Python classes into HTML'),\n",
     "        html.P(\"This conversion happens behind the scenes by Dash's JavaScript front-end\")\n",
@@ -1089,12 +1193,12 @@
     "                for c in px.colors.named_colorscales()\n",
     "            ])\n",
     "    ]),\n",
-    "])\n"
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,12 +1214,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig1.write_html(\"../docs/_includes/fig1.html\")\n",
-    "fig2.write_html(\"../docs/_includes/fig2.html\")"
+    "fig1_1.write_html(\"../docs/_includes/fig9.html\")\n",
+    "fig1_2.write_html(\"../docs/_includes/fig10.html\")\n",
+    "fig2.write_html(\"../docs/_includes/fig1.html\")\n",
+    "fig3.write_html(\"../docs/_includes/fig2.html\")"
    ]
   },
   {
@@ -1127,11 +1233,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
     "sc.stop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! open .."
    ]
   },
   {
