--- a/Notebooks/Interget_EDA_n_visual.ipynb
+++ b/Notebooks/Interget_EDA_n_visual.ipynb
@@ -1,15 +1,8 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Project: Open Payment"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +14,7 @@
     "from pyspark import SparkContext, SparkConf\n",
     "\n",
     "import plotly.express as px \n",
+    "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
     "from jupyter_dash import JupyterDash \n",
     "import dash_core_components as dcc \n",
@@ -32,17 +26,12 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from keys.sadaminghkeys import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ! pip install dash\n",
-    "# ! pip install jupyter-dash"
+    "import pyspark\n",
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "import chart_studio.plotly as py\n",
+    "\n",
+    "# from keys.sadaminghkeys import *"
    ]
   },
   {
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,14 +55,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "hadoopConf = sc._jsc.hadoopConfiguration()\n",
     "hadoopConf.set(\"fs.s3.impl\", \"org.apache.hadoop.fs.s3a.S3AFileSystem\")\n",
-    "hadoopConf.set('fs.s3a.access.key', AWS_PUBLIC)\n",
-    "hadoopConf.set('fs.s3a.secret.key', AWS_SECRET)"
+    "sc._jsc.hadoopConfiguration().set('fs.s3a.access.key', 'AKIAUTWHXTJVEWXWBKJN')\n",
+    "sc._jsc.hadoopConfiguration().set('fs.s3a.secret.key', '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')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = 's3a://usf-msds694-openpayments/BigSets/OP_DTL_GNRL_PGYR2019_P06302021.csv'\n",
+    "rdd = sc.textFile(file)"
    ]
   },
   {
@@ -82,17 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = 's3://usf-msds694-openpayments/BigSets/OP_DTL_GNRL_PGYR2019_P06302021.csv'\n",
-    "rdd = sc.textFile(file)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# take a small sample\n",
+    "# take a small sample of 2000\n",
     "rdd = sc.parallelize(rdd.take(2000)) "
    ]
   },
@@ -105,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,15 +104,8 @@
     "    df.columns = df.iloc[0]\n",
     "    df = df.iloc[1:]\n",
     "    df.head(20)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return df\n",
+    "\n",
     "def isfloat(element: str) -> bool:\n",
     "    \"\"\"Check if a string can be convert to float\"\"\"\n",
     "    try:\n",
@@ -137,7 +119,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Data Processing"
+    "## 3. EDA"
    ]
   },
   {
@@ -149,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -969,7 +951,7 @@
        "5                                             2019               06/30/2021  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -995,7 +977,7 @@
        "1999"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1007,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +998,7 @@
        "1398"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1020,7 @@
        "1330332.6100000003"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,12 +1035,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.1 Payment Distribution"
+    "## 4. Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1 Payment Distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1088,12 +1077,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.2 How many recipient records each state"
+    "### 4.2 How many recipient records each state"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1123,12 +1112,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3.3 How much money in total for each state by manufactures"
+    "### 4.3 How much money in total for each state by manufactures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1161,93 +1150,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Dash Example"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "app.layout = html.Div([\n",
-    "    html.H1(\"JupyterDash Demo\"),\n",
-    "#     dcc.Graph(id='graph1', figure=fig1),\n",
-    "    dcc.Graph(id='graph2', figure=fig2),\n",
-    "    dcc.Graph(id='graph3', figure=fig3),\n",
-    "    dcc.Graph(id='graph_test_1', figure=fig1_1),\n",
-    "    dcc.Graph(id='graph_test_2', figure=fig1_2),\n",
-    "    html.Div([\n",
-    "        html.P('Dash converts Python classes into HTML'),\n",
-    "        html.P(\"This conversion happens behind the scenes by Dash's JavaScript front-end\")\n",
-    "    ]),\n",
-    "    html.Label([\n",
-    "        \"colorscale\",\n",
-    "        dcc.Dropdown(\n",
-    "            id='colorscale-dropdown', clearable=False,\n",
-    "            value='plasma', options=[\n",
-    "                {'label': c, 'value': c}\n",
-    "                for c in px.colors.named_colorscales()\n",
-    "            ])\n",
-    "    ]),\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "app.run_server(mode='jupyterlab', debug=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Save Visulizations as HTMLs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig1_1.write_html(\"../docs/_includes/fig9.html\")\n",
-    "fig1_2.write_html(\"../docs/_includes/fig10.html\")\n",
-    "fig2.write_html(\"../docs/_includes/fig1.html\")\n",
-    "fig3.write_html(\"../docs/_includes/fig2.html\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Stop Service"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sc.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "! open .."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1255,6 +1162,134 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Dash Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.layout = html.Div([\n",
+    "    html.H1(\"JupyterDash Demo\"),\n",
+    "    dcc.Graph(id='graph_test_1', figure=fig1_1),\n",
+    "    dcc.Graph(id='graph_test_2', figure=fig1_2),\n",
+    "#     dcc.Graph(id='graph1', figure=fig1),\n",
+    "    dcc.Graph(id='graph2', figure=fig2),\n",
+    "    dcc.Graph(id='graph3', figure=fig3),\n",
+    "    dcc.Graph(id='graph4', figure=fig4),\n",
+    "    dcc.Graph(id='graph5', figure=fig5),\n",
+    "    dcc.Graph(id='graph6', figure=fig6),\n",
+    "    dcc.Graph(id='graph7', figure=fig7),\n",
+    "    dcc.Graph(id='graph8', figure=fig8),\n",
+    "    dcc.Graph(id='graph9', figure=fig9),\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "app.run_server(debug=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Save Visulizations as HTMLs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig1_1.write_html(\"./fig1_1.html\")\n",
+    "fig1_2.write_html(\"./fig1_2.html\")\n",
+    "fig2.write_html(\"./fig2.html\")\n",
+    "fig3.write_html(\"./fig3.html\")\n",
+    "fig4.write_html(\"./fig4.html\")\n",
+    "fig5.write_html(\"./fig5.html\")\n",
+    "fig6.write_html(\"./fig6.html\")\n",
+    "fig7.write_html(\"./fig7.html\")\n",
+    "fig8.write_html(\"./fig8.html\")\n",
+    "fig9.write_html(\"./fig9.html\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Stop Service"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc.stop()"
+   ]
   }
  ],
  "metadata": {
