--- a/Notebooks/Integrate_EDA_n_visual.ipynb
+++ b/Notebooks/Integrate_EDA_n_visual.ipynb
@@ -1032,6 +1032,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Total number of manufacture \n",
+    "manuf_index = header.index('Applicable_Manufacturer_or_Applicable_GPO_Making_Payment_ID')\n",
+    "rdd.map(lambda x: x[manuf_index]).distinct().count() - 1"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
